# bevy_playground

./: .gitignore
.devcontainer/: devcontainer.json
bevy_playground/: Cargo.toml
bevy_playground/src/: lib.rs  main.rs
bevy_playground/web/: README.md  build.sh  index.html  serve.sh  style.css
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
