[package]
name = "bevy_playground"
version = "0.1.0"
edition = "2024"

# Enable optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.15.3"
bevy_input = "0.15.3"

# Dependencies for WASM support
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
] }
console_error_panic_hook = "0.1.7"

# Configure the WASM build
[lib]
crate-type = ["cdylib", "rlib"]
