[package]
name = "bevy_playground"
version = "0.1.0"
edition = "2024"

# Enable optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.15.3"
bevy_input = "0.15.3"
